Avoid horizontal scrollbar on body

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -34,6 +34,7 @@ md-progress-bar {
 .search-box {
   position: absolute;
   top: 2em;
+  left: 0;
 
   &.sticky {
     top: 0;
